--- a/index2.html
+++ b/index2.html
@@ -68,25 +68,25 @@
 
             <div class="carousel-inner">
               <div class="item active">
-                <img src="images/william1.jpg" alt="Documentation">
+                <img src="https://williamyaps.github.io/downloadyoutube/images/william1.jpg" alt="Documentation">
                 <div class="carousel-caption">
                   <h2>Download all flash video sites, see the supported website at documentation.</h2>
                 </div>
               </div>
               <div class="item">
-                <img src="images/william2.jpg" alt="DOS SHELL">
+                <img src="https://williamyaps.github.io/downloadyoutube/images/william2.jpg" alt="DOS SHELL">
                 <div class="carousel-caption">
                   <h2>The program run under DOS SHELL, support all Windows version.</h2>
                 </div>
               </div>
               <div class="item">
-                <img src="images/slides-player-quality.jpg" alt="Video quality">
+                <img src="https://williamyaps.github.io/downloadyoutube/images/slides-player-quality.jpg" alt="Video quality">
                 <div class="carousel-caption">
                   <h2>Choose the quality of video and audio you want.</h2>
                 </div>
               </div>
               <div class="item">
-                <img src="images/william3.jpg" alt="Download">
+                <img src="https://williamyaps.github.io/downloadyoutube/images/william3.jpg" alt="Download">
                 <div class="carousel-caption">
                   <h2>Also can save sub-title and save to your PC.</h2>
                 </div>
