--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Language" content="en">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<base target="_parent" />
-<title>New Page 1</title>
+<title>How to use</title>
 </head>
 
 <body>
-
 <link href="menu-files/styles_2m1i2.css" type="text/css" rel="stylesheet"/>
 <ul id="vbUL_om1i2" class="vbUL2m1i2" style="visibility:hidden;">
 <li><a href="https://williamyaps.github.io/downloadyoutube/getting-started.html" title="How to use" target="_parent">How&nbsp;to&nbsp;use</a>
@@ -28,10 +25,13 @@
 <a target="_parent" onMouseOver='xpe("om1i2o");xpshow("om1i2",0,this);xpsmover(this);' onMouseOut='xpsmout(this);' onMouseDown='xpe("om1i2c");'><img id="xpi_om1i2" src="menu-files/btom1i2_0.gif" name=vbom1i2 width="115" height="26" border=0 alt="Downloader"></a></td><td style="padding-right:0px" title ="Adblock">
 <a href="https://wlmyaps.github.io/priskila/data/adblock.html" target="_parent" onMouseOver='xpe("wm1i2o");' onMouseOut='xpe("wm1i2n");' onMouseDown='xpe("wm1i2c");'><img id="xpi_wm1i2" src="menu-files/btwm1i2_0.gif" name=vbwm1i2 width="115" height="26" border=0 alt="Adblock"></a></td><td style="padding-right:0px" title ="Social Media">
 <a target="_parent" onMouseOver='xpe("4m1i2o");xpshow("4m1i2",0,this);xpsmover(this);' onMouseOut='xpsmout(this);' onMouseDown='xpe("4m1i2c");'><img id="xpi_4m1i2" src="menu-files/bt4m1i2_0.gif" name=vb4m1i2 width="115" height="26" border=0 alt="Social Media"></a></td></tr></table>
-<noscript><a href="http://vista-buttons.com">Web Page Button by Vista-Buttons.com v2.27</a></noscript>
-<p><iframe name="I1" height="100%" width="100%" src="index2.html">
+
+
+<p>
+<iframe name="I1" height="100%" width="100%" src="https://williamyaps.github.io/downloadyoutube/index.html">
 Your browser does not support inline frames or is currently configured not to display inline frames.
 </iframe></p>
+
 
 </body>
 
