--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <nav class="menu bott left download">
         <ul>
             <li><a href="William-Yap.pdf" target="_blank">Download <span class="active">My Resume</span>   <i class="icon icon-file"></i></a></li>
+			<li><a href="https://williamyaps.github.io/index2.html" target="_blank">Next page <span class="active">My next page</span></a></li>
         </ul>
     </nav>
 
