--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav class="menu bott left download">
         <ul>
             <li><a href="William-Yap.pdf" target="_blank">Download <span class="active">My Resume</span>   <i class="icon icon-file"></i></a></li>
-			<li><a href="https://williamyaps.github.io/index2.html" target="_blank">Next page <span class="active">My next page</span></a></li>
+			<li><a href="https://williamyaps.github.io/index2.html" target="_blank">Next page <span class="active">My next pages</span><i class="icon icon-file"></i></a></li>
         </ul>
     </nav>
 
@@ -438,7 +438,7 @@
                                         <img src="img/portfolio/5_full.jpg" alt="">
                                         <div class="gallery-caption">
                                             <div>
-                                                <h4>Plaza Mayor</h4>
+                                                <h4>Giant wall of China</h4>
                                             </div>
                                         </div>
                                     </a>
