--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Welcome to William Yap Homepages</title>
+		<title>威廉® William Yap Personal Biography</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1.0; minimum-scale=1, maximum-scale=1">
 
@@ -12,14 +12,16 @@
 		<script src="js/jquery.touchSwipe-1.2.4.js"></script>
 		<script src="js/html5.js"></script>
 	</head>
-	<body>
+	<body background="img/backGroundImgURL.jpg">
+<!--	<body>
 		<canvas id="pathCanvas">
-		</canvas>
+		</canvas> -->
 		 
 
 		<header>
 			<h1><a href="https://williamyaps.github.io/cv.html"><img id="logo" src="images/logo.png" alt="William Yap-netlash"/></a></h1>
 		</header>
+		
 		<!-- BACKGROUND PARTICLES -->
     <div class="main-bg bg-image overlay" data-image="img/backGroundImgURL.jpg">
         <div id="particles-js"></div>
