--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
 		<script src="js/jquery.touchSwipe-1.2.4.js"></script>
 		<script src="js/html5.js"></script>
 	</head>
-	<body background="img/backGroundImgURL.jpg">
-<!--	<body>
+		<body>
 		<canvas id="pathCanvas">
-		</canvas> -->
+		</canvas>
 		 
-
 		<header>
 			<h1><a href="https://williamyaps.github.io/cv.html"><img id="logo" src="images/logo.png" alt="William Yap-netlash"/></a></h1>
 		</header>
 		
-		<!-- BACKGROUND PARTICLES -->
+		<!-- BACKGROUND PARTICLES
     <div class="main-bg bg-image overlay" data-image="img/backGroundImgURL.jpg">
         <div id="particles-js"></div>
-    </div>
+    </div> -->
 
 		<section id="screen1">
 			<h2>My Personal</h2>
