--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</canvas>
 		 
 		<header>
-			<h1><a href="https://williamyaps.github.io/cv.html"><img id="logo" src="images/logo.png" alt="William Yap-netlash"/></a></h1>
+			<h1><a target="_blank" href="https://williamyaps.github.io/cv.html"><img id="logo" src="images/logo.png" alt="William Yap-netlash"/></a></h1>
 		</header>
 		
 		<!-- BACKGROUND PARTICLES
@@ -67,11 +67,11 @@
 		<section id="screen4">
 			<p><span>Page </span>4</p>
 			<div id="contact">
-				<h2><a href="https://williamyaps.github.io/index3.html">Contact</a></h2>
+				<h2><a target="_blank" href="https://williamyaps.github.io/index3.html"">Contact</a></h2>
 				<ul>
-					<li><a href="https://williamyaps.github.io/index3.html">Me</a></li>
-					<li><a href="https://williamyaps.github.io/cv.html">Netflash</a></li>
-					<li><a href="https://williamyaps.github.io/index3.html">William Yap</a></li>
+					<li><a target="_blank" href="https://williamyaps.github.io/index3.html">Me</a></li>
+					<li><a target="_blank" href="https://williamyaps.github.io/cv.html">Netflash</a></li>
+					<li><a target="_blank" href="https://williamyaps.github.io/index3.html">William Yap</a></li>
 				</ul>
 			</div>
 			<aside>
