--- a/mobile.html
+++ b/mobile.html
@@ -14,7 +14,7 @@
 	<body>
 
 		<!--<header>
-			<h1><a href="https://williamyaps.github.io/cv.html"><img id="logo" src="images/logo.png" alt="William Yap-netflash"/></a></h1>
+			<h1><a href="https://williamyaps.github.io/cv.html"><img id="logo" src="images/logo.png" alt="William Yap-netlash"/></a></h1>
 		</header>-->
 
 		<section id="screen1">
