--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>威廉® William Yap Personal Biography</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="initial-scale=1.0; minimum-scale=1, maximum-scale=1">
+		<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+		<meta name="viewport" content="initial-scale=1.0, minimum-scale=1, maximum-scale=1">
 
 		<link href="css/screen.css" rel="stylesheet" type="text/css" id="stylesheet"/>
 
