--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Personal website">
     <meta name="author" content="William Yap">
     <link rel="icon" href="img/wlm.ico">
-    <title>威廉® William Yap Personal Biography</title>
+    <title>叶威廉® William Yap Personal Biography</title>
 
     <!-- BOOTSTRAP CORE CSS -->
     <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
