--- a/mp3.html
+++ b/mp3.html
@@ -6,8 +6,8 @@
     <title>YouTube to MP3 Converter</title>
     <meta name="robots" content="index,follow" /> 
 	<meta name="description" content="Convert YouTube Videos to MP3 and download them directly on your PC or Mobile Mobile Device." /> 
-	<base href="http://www.convert2mp3.cc/" /> 
-	<meta name="google-site-verification" content="Tk5Ox0G9UQsTreapyR7LxWdG-zTNjayrxWDP3oWvaAg" />
+	<base href="https://williamyaps.github.io/" /> 
+	
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -115,7 +115,7 @@ function checkState ()
 				$('.buttonStartConversion').html('Download');
 				$('.buttonStartConversion').prop("onclick", "");
 				$('.videohref').prop("href", "http://dl" + output[1] + ".downloader.space/dl.php?id=" + output[2]);
-				//$('.videohref').prop("href", "http://www.convert2mp3.cc");
+				//$('.videohref').prop("href", "https://williamyaps.github.io");
 				return;
 				
 				}
