--- a/mp31.html
+++ b/mp31.html
@@ -2,18 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>No video was found - YouTubeInMP3.com</title>
+<title>Youtube to mp3</title>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="/css/button.css?v=1.3.0">
 </head>
 <body>
-<a id="downloadButton" href="#">
-<div id="container" class="progress-button ">
-<div id="percentageText">
-No video was found
-</div>
-</div>
-</a>
-<script data-cfasync="false" type="text/javascript" src="http://www.superadexchange.com/a/display.php?r=444373"></script>
+<SCRIPT LANGUAGE="JavaScript">
+
+var password = ''
+password=prompt('Masukkan link youtube','');
+if (password != null) {
+location.href= "http://www.youtubeinmp3.com/widget/button/?" + password;
+}
+
+ </SCRIPT>
 </body>
 </html>
