--- a/index2.html
+++ b/index2.html
@@ -6,25 +6,31 @@
 </head>
 
 <body>
-<link href="menu-files/styles_2m1i2.css" type="text/css" rel="stylesheet"/>
-<ul id="vbUL_om1i2" class="vbUL2m1i2" style="visibility:hidden;">
-<li><a href="https://williamyaps.github.io/downloadyoutube/getting-started.html" title="How to use" target="_parent">How&nbsp;to&nbsp;use</a>
-<ul id="vbUL_zm1i2" class="vbUL2m1i2">
-<li><a href="https://williamyaps.github.io/downloadyoutube/examples.html" title="Examples" target="_parent">Examples</a></li>
-<li><a href="https://williamyaps.github.io/downloadyoutube/videos.html" title="Videos">Videos</a></li></ul></li>
-<li><a href="https://williamyaps.github.io/downloadyoutube/documentation/index.html" title="Website support" target="_parent">Website&nbsp;support</a></li>
-<li><a href="https://williamyaps.github.io/downloadyoutube/faq.html" title="Download" target="_parent">Download</a></li></ul>
-<ul id="vbUL_4m1i2" class="vbUL2m1i2" style="visibility:hidden;">
-<li><a href="https://www.facebook.com/williamyaps" title="Facebook" target="_parent">Facebook</a></li>
-<li><a href="https://www.instagram.com/williamyaps/" title="Instagram" target="_parent">Instagram</a></li></ul>
-<script type="text/javascript" src="menu-files/sc2m1i2.js"></script>
-<table id="vista-buttons.com:id2m1i2" width=0 cellpadding=0 cellspacing=0 border=0><tr><td style="padding-right:0px" title ="Home ">
-<a href="https://williamyaps.github.io/downloadyoutube/" target="_parent" onMouseOver='xpe("2m1i2o");' onMouseOut='xpe("2m1i2n");' onMouseDown='xpe("2m1i2c");'><img id="xpi_2m1i2" src="menu-files/bt2m1i2_0.gif" name=vb2m1i2 width="115" height="26" border=0 alt="Home "></a></td><td style="padding-right:0px" title ="My Blog">
-<a href="https://williamyaps.blogspot.com" target="_parent" onMouseOver='xpe("tm1i2o");' onMouseOut='xpe("tm1i2n");' onMouseDown='xpe("tm1i2c");'><img id="xpi_tm1i2" src="menu-files/bttm1i2_0.gif" name=vbtm1i2 width="115" height="26" border=0 alt="My Blog"></a></td><td style="padding-right:0px" title ="My Old Website">
-<a href="http://williamyaps.webs.com/" target="_parent" onMouseOver='xpe("pm1i2o");' onMouseOut='xpe("pm1i2n");' onMouseDown='xpe("pm1i2c");'><img id="xpi_pm1i2" src="menu-files/btpm1i2_0.gif" name=vbpm1i2 width="115" height="26" border=0 alt="My Old Website"></a></td><td style="padding-right:0px" title ="Downloader">
-<a target="_parent" onMouseOver='xpe("om1i2o");xpshow("om1i2",0,this);xpsmover(this);' onMouseOut='xpsmout(this);' onMouseDown='xpe("om1i2c");'><img id="xpi_om1i2" src="menu-files/btom1i2_0.gif" name=vbom1i2 width="115" height="26" border=0 alt="Downloader"></a></td><td style="padding-right:0px" title ="Adblock">
-<a href="https://wlmyaps.github.io/priskila/data/adblock.html" target="_parent" onMouseOver='xpe("wm1i2o");' onMouseOut='xpe("wm1i2n");' onMouseDown='xpe("wm1i2c");'><img id="xpi_wm1i2" src="menu-files/btwm1i2_0.gif" name=vbwm1i2 width="115" height="26" border=0 alt="Adblock"></a></td><td style="padding-right:0px" title ="Social Media">
-<a target="_parent" onMouseOver='xpe("4m1i2o");xpshow("4m1i2",0,this);xpsmover(this);' onMouseOut='xpsmout(this);' onMouseDown='xpe("4m1i2c");'><img id="xpi_4m1i2" src="menu-files/bt4m1i2_0.gif" name=vb4m1i2 width="115" height="26" border=0 alt="Social Media"></a></td></tr></table>
+<!-- Begin William Yap CSS Menu Style -->
+<link href="https://williamyaps.github.io/menu1-files/styles_vir3c.css" type="text/css" rel="stylesheet"/>
+<ul id="vbUL_lir3c" class="vbULvir3c" style="visibility:hidden;">
+<li><a href="https://williamyaps.github.io/downloadyoutube/getting-started.html" title="How to use" target="_blank">How&nbsp;to&nbsp;use</a>
+<ul id="vbUL_hir3c" class="vbULvir3c">
+<li><a href="https://williamyaps.github.io/downloadyoutube/examples.html" title="Example" target="_blank">Example</a></li>
+<li><a href="https://williamyaps.github.io/downloadyoutube/videos.html" title="Video" target="_blank">Video</a></li></ul></li>
+<li><a href="https://williamyaps.github.io/downloadyoutube/documentation/index.html" title="Website support" target="_blank">Website&nbsp;support</a></li>
+<li><a href="https://williamyaps.github.io/downloadyoutube/faq.html" title="Download" target="_blank">Download</a></li></ul>
+<ul id="vbUL_nir3c" class="vbULvir3c" style="visibility:hidden;">
+<li><a href="https://alkitab-biblebooks.github.io/calender.htm" title="Daily Bible" target="_blank">Daily&nbsp;Bible</a></li>
+<li><a href="http://dailybiblebooks.blogspot.com/p/book.html" title="Weekly Bible" target="_blank">Weekly&nbsp;Bible</a></li>
+<li><a href="http://dailybiblebooks.blogspot.com/p/video.html" title="Video Bible" target="_blank">Video&nbsp;Bible</a></li>
+<li><a href="https://www.facebook.com/alkitab.biblebooks" title="Follow Us" target="_blank">Follow&nbsp;Us</a></li></ul>
+<script type="text/javascript" src="https://williamyaps.github.io/menu1-files/scvir3c.js"></script>
+<table id="vista-buttons.com:idvir3c" width=0 cellpadding=0 cellspacing=0 border=0><tr><td style="padding-right:0px" title ="Home">
+<a href="https://williamyaps.github.io/downloadyoutube/" target="_blank" onMouseOver='xpe("vir3co");' onMouseOut='xpe("vir3cn");' onMouseDown='xpe("vir3cc");'><img id="xpi_vir3c" src="menu1-files/btvir3c_0.gif" name=vbvir3c width="123" height="44" border=0 alt="Home"></a></td><td style="padding-right:0px" title ="My Blog">
+<a href="https://williamyaps.blogspot.com/" target="_blank" onMouseOver='xpe("yir3co");' onMouseOut='xpe("yir3cn");' onMouseDown='xpe("yir3cc");'><img id="xpi_yir3c" src="menu1-files/btyir3c_0.gif" name=vbyir3c width="123" height="44" border=0 alt="My Blog"></a></td><td style="padding-right:0px" title ="My Old Website">
+<a href="http://williamyaps.webs.com/" target="_blank" onMouseOver='xpe("xir3co");' onMouseOut='xpe("xir3cn");' onMouseDown='xpe("xir3cc");'><img id="xpi_xir3c" src="menu1-files/btxir3c_0.gif" name=vbxir3c width="123" height="44" border=0 alt="My Old Website"></a></td><td style="padding-right:0px" title ="Downloader">
+<a href="https://williamyaps.github.io/index2.html" target="_blank" onMouseOver='xpe("lir3co");xpshow("lir3c",0,this);xpsmover(this);' onMouseOut='xpsmout(this);' onMouseDown='xpe("lir3cc");'><img id="xpi_lir3c" src="menu1-files/btlir3c_0.gif" name=vblir3c width="123" height="44" border=0 alt="Downloader"></a></td><td style="padding-right:0px" title ="Adblock">
+<a href="https://wlmyaps.github.io/priskila/data/adblock.html" target="_blank" onMouseOver='xpe("bir3co");' onMouseOut='xpe("bir3cn");' onMouseDown='xpe("bir3cc");'><img id="xpi_bir3c" src="menu1-files/btbir3c_0.gif" name=vbbir3c width="123" height="44" border=0 alt="Adblock"></a></td><td style="padding-right:0px" title ="Social Media">
+<a href="https://www.facebook.com/williamyaps/" target="_blank" onMouseOver='xpe("fir3co");' onMouseOut='xpe("fir3cn");' onMouseDown='xpe("fir3cc");'><img id="xpi_fir3c" src="menu1-files/btfir3c_2.gif" name=vbfir3c width="123" height="44" border=0 alt="Social Media"></a></td><td style="padding-right:0px" title ="My Books">
+<a href="https://alkitab-biblebooks.github.io" target="_blank" onMouseOver='xpe("nir3co");xpshow("nir3c",0,this);xpsmover(this);' onMouseOut='xpsmout(this);' onMouseDown='xpe("nir3cc");'><img id="xpi_nir3c" src="menu1-files/btnir3c_0.gif" name=vbnir3c width="123" height="44" border=0 alt="My Books"></a></td></tr></table>
+<noscript><a href="https://williamyaps.github.io/">William Yap Webmaster Developer</a></noscript>
+<!-- End William Yap CSS Menu Style -->
 
 
 <p>
