--- a/cobak.html
+++ b/cobak.html
@@ -1,1 +1,1 @@
-<iframe frameborder="0" allowfullscreen height="100%" autoplay=0 controls scrolling="no" src="//developer-tools.jwplayer.com/player-event-inspector" width="100%"></iframe>
+<iframe frameborder="0" allowfullscreen height="1500" autoplay=0 controls scrolling="no" src="//developer-tools.jwplayer.com/player-event-inspector" width="100%"></iframe>
